--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,10 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title>Wild Series</title>
-</head>
-<body>
-   <h1>{{ website }} index</h1>
-</body>
-</html>
+{% extends "base.html.twig" %}
+
+{% block title %}WSC-programmes{% endblock %}
+
+{% block body %}
+   <h1>{{website}} index</h1>
+{% endblock %}
