--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,6 @@
         <div class="container mt-5 allPageContainer">
             {% block body %}{% endblock %}
         </div>
-        
+        {% include'_footer.html.twig' %}
     </body>
 </html>
