first entities and favicon

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
-        
+        <link rel="icon" href="{{ asset('build/images/fav.png') }}"/>
         <link rel="stylesheet" href="/build/app.css">
         <script src="/build/app.js"></script>
     </head>
