--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,7 +1,20 @@
 {% extends "base.html.twig" %}
 
-{% block title %}WSC-programmes{% endblock %}
+{% block title %}WS2-programmes{% endblock %}
 
 {% block body %}
-   <h1>{{website}} index</h1>
-{% endblock %}
+   <h1 class="title mb-5">Liste des séries:</h1>
+
+   {% for program in programs %}
+   <div class="programContainer">
+       <h2 class="subtitle">{{ loop.index }} - {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+       <p>{{ program.summary }}</p>
+   </div>
+{% else %}
+   Aucune série trouvée.
+{% endfor %}
+
+<a href="{{ path('app_index') }}">
+   Retour à l'accueil
+</a>
+{% endblock %} 
