--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}WSC-programme {{id}}{% endblock %}
+{% block title %}WS2-programme {{id}}{% endblock %}
 
 {% block body %}
    <h1>Programme n°{{id}}</h1>
