--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
         <header>
             {% include'_navbar.html.twig' %}
         </header>
-        <div class="container mt-5 allPageContainer">
+        <div class="allPageContainer">
             {% block body %}{% endblock %}
         </div>
         {% include'_footer.html.twig' %}
