--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -8,10 +8,14 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/">Accueil</a>
+                </li><li class="nav-item">
+                    <a class="nav-link" href="{{ path('category_index') }}">Catégories</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('program_index') }}">Séries</a>
                 </li>
+                
             </ul>
         </div>
     </div>
