--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 {% block title %}Welcome to WS2!{% endblock %}
 {% block body %}
+
+<div class="container mt-5">
 <h1>Bienvenue!</h1>
+</div>
+
 {% endblock %}
