--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -6,7 +6,7 @@
 <div class="container mt-5">
    <h1 class="title mb-5">Liste des séries:</h1>
    {% for program in programs %}
-       <h2 class="subtitle">{{ loop.index }} - {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+      <a href="{{path('program_show', { 'id': program.id }) }}"><h2 class="subtitle">{{ loop.index }} - {{ program.title }} - Catégorie : {{ program.category.name }}</h2></a>
        <p class="justify">{{ program.summary }}</p>
    {% else %}
       Aucune série trouvée.
