--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -14,6 +14,7 @@ $navbar-dark-active-color: #ffffff;
 $navbar-dark-toggler-icon-bg: #ffffff;
 $navbar-inverse-toggler-bg: #ffffff;
 $footer-color: #bbadae;
+$card-background: #c4c4dc;
 
 /* general */
 html {
@@ -124,6 +125,16 @@ footer a:hover {
 
 .media-body {
   margin-left: 2rem;
+}
+
+
+/*cards*/
+
+.card {
+  background-color: $card-background ;
+}
+.card-title {
+  color: $main-color;
 }
 
 @media (max-width: 992px) {
