--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -21,7 +21,7 @@
                  <h6 class="card-subtitle mb-2 text-muted">année : {{season.year}}</h6>
                  <!-- use string-extra got from composer to get twig truncate filter to use with u filter-->
                  <p class="card-text">{{season.description | u.truncate(100, '...')}}</p>
-                 <a href="#" class="card-link">Voir plus</a>
+                 <a href="{{path('program_season_show', { 'programId': program.id, 'seasonId':season.id }) }}" class="card-link">Voir plus</a>
                </div>
              </div>
             {% endfor %}
@@ -31,7 +31,7 @@
 </div>
 <div class="returnLink">
    <a href="{{ path('program_index') }}">
-      Retour à la liste des programmes
+      Retour à la liste des séries
    </a>
 </div>
 {% endblock %}
