add episodes list

--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -12,8 +12,21 @@
        <div class="media-body">
           <h1 class="title mt-0">{{ program.title }} - Saison {{season.number}} </h1>
           <p><span class="subtitle">Catégorie :</span> {{ program.category.name }}</p>
-          <p>{{season.description}}</p>  
-          
+          <p>{{season.description}}</p>
+          <p class="subtitle">Episodes:</p>
+          <div class="flex flex-row">
+            {% for episode in episodes %}
+            <div class="card" style="width: 18rem;">
+               <div class="card-body">
+                 <h5 class="card-title">{{episode.title}}</h5>
+                 <h6 class="card-subtitle mb-2 text-muted">episode {{episode.number}}</h6>
+                 <!-- use string-extra got from composer to get twig truncate filter to use with u filter-->
+                 <p class="card-text">{{episode.synopsis | u.truncate(100, '...')}}</p>
+                 <a href="#" class="card-link">Voir plus</a>
+               </div>
+             </div>
+            {% endfor %}
+          </div>
        </div>
     </div>
  </div>
