change return links

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -14,8 +14,8 @@
          
 </div>
 <div class="returnLink">
-   <a href="{{ path('program_index') }}">
-      Retour à la liste des programmes
+   <a href="{{ path('category_index') }}">
+      Retour à la liste des catégories
    </a>
 </div>
 {% endblock %}
