--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&family=Risque&display=swap');
 
-$primary: #0074d9;
+$primary: #4b191d;
 $danger: #ff4136;
 $background_color:#d6d6ed;
 $main-color: #4b191d;
@@ -135,6 +135,22 @@ footer a:hover {
 }
 .card-title {
   color: $main-color;
+}
+
+/*forms*/
+
+.btn-primary {
+  background-color: $main-color;
+  border : $main-color;
+}
+
+.btn-primary:hover {
+  background-color: rgba($main-color, 0.75);
+  border : $main-color;
+}
+
+.typeLabel {
+  color: $primary;
 }
 
 @media (max-width: 992px) {
