improve season index layout

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -159,6 +159,12 @@ footer a:hover {
   color: $primary;
 }
 
+/*tables*/
+
+.tableTitles {
+  color: $primary;
+}
+
 @media (max-width: 992px) {
 
   .programDetails {
