add seasons to navbar

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -11,9 +11,11 @@
                 </li><li class="nav-item">
                     <a class="nav-link" href="{{ path('category_index') }}">Catégories</a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('program_index') }}">Séries</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('season_index') }}">Saisons</a>
                 </li>
                 
             </ul>
