--- a/templates/season/_delete_form.html.twig
+++ b/templates/season/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('season_delete', {'id': season.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form class="mt-3 col-md-2" method="post" action="{{ path('season_delete', {'id': season.id}) }}" onsubmit="return confirm('Etes vous sûrs de vouloir supprimer cette saison?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ season.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger col-md-12">supprimer</button>
 </form>
