--- a/templates/season/_form.html.twig
+++ b/templates/season/_form.html.twig
@@ -1,4 +1,14 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="row flex justify-content-center mt-3">
+    <div class="col-md-5 typeLabel">
+        {{ form_row(form.program) }}
+        {{ form_row(form.number) }}
+        {{ form_row(form.year) }}
+        {{ form_row(form.description) }}
+        
+    </div>
+</div>
+<div class="row flex justify-content-center">
+    <button type="submit" class="btn btn-primary col-2 mt-3">{{ button_label|default('Ajouter') }}</button>
+</div>
 {{ form_end(form) }}
