--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -1,34 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Season{% endblock %}
+{% block title %}WS2 - saisons{% endblock %}
 
 {% block body %}
-    <h1>Season</h1>
+<div class="container">
+    <h1 class="title mt-5">{{season.program.title}} - saison {{season.number}}</h1>
 
-    <table class="table">
+    <table class="table mt-3">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ season.id }}</td>
-            </tr>
-            <tr>
-                <th>Number</th>
-                <td>{{ season.number }}</td>
-            </tr>
-            <tr>
-                <th>Year</th>
+                <th class="tableTitles">Année</th>
                 <td>{{ season.year }}</td>
             </tr>
             <tr>
-                <th>Description</th>
+                <th class="tableTitles">Résumé</th>
                 <td>{{ season.description }}</td>
             </tr>
         </tbody>
     </table>
+    <div class = "flex flex-row justify-content-between">
+        <a href="{{ path('season_edit', {'id': season.id}) }}" class="btn btn-primary col-md-2 mt-3">Modifier</a>
+            {{ include('season/_delete_form.html.twig') }}
+      
+    </div>
+</div>
+<div class="mt-3">
+    <a href="{{ path('season_index') }}" class="returnLink">Retour à la liste des saisons</a>
+</div>
 
-    <a href="{{ path('season_index') }}">back to list</a>
-
-    <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
-
-    {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
