--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -3,12 +3,13 @@
 {% block title %}WS2 - modifier{% endblock %}
 
 {% block body %}
-    <h1 class="title text-center">Modifier la saison</h1>
+    <h1 class="title text-center mt-5">Modifier la saison</h1>
     {{ include('season/_form.html.twig', {'button_label': 'Modifier'}) }}
- <div class="flex justify-center">
+    <div class="flex justify-content-center">
         {{ include('season/_delete_form.html.twig') }}
     </div>
     <a href="{{ path('season_index') }}" class="returnLink">Retour à la liste des saisons</a>
    
     
 {% endblock %}
+  
