add episodes to navbar linked to index

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -17,6 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('season_index') }}">Saisons</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('episode_index') }}">Episodes</a>
+                </li>
                 
             </ul>
         </div>
