--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -1,34 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Episode{% endblock %}
+{% block title %}WS2 - episodes{% endblock %}
 
 {% block body %}
-    <h1>Episode</h1>
+<div class="container"> 
+    <h1 class="title mt-5">{{episode.title}}</h1>
+    <h2 class="subtitle">{{episode.season.program.title}}- saison{{episode.season.number}}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ episode.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ episode.title }}</td>
-            </tr>
-            <tr>
-                <th>Number</th>
-                <td>{{ episode.number }}</td>
-            </tr>
-            <tr>
-                <th>Synopsis</th>
-                <td>{{ episode.synopsis }}</td>
+                <th class="tableTitles">Résumé</th>
+                <td>{{episode.synopsis }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('episode_index') }}">back to list</a>
-
-    <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
-
-    {{ include('episode/_delete_form.html.twig') }}
+<div class = "flex flex-row justify-content-between">
+    <a href="{{ path('episode_edit', {'id': episode.id}) }}" class="btn btn-primary col-md-2 mt-3">Modifier</a>
+        {{ include('episode/_delete_form.html.twig') }}
+</div>
+</div>
+<div class="mt-3">
+<a href="{{ path('episode_index') }}" class="returnLink">Retour à la liste des épisodes</a>
+</div>
 {% endblock %}
