episode form season choice display with program name and season number

--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -37,7 +37,7 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('episode_new') }}" class="btn btn-primary mt-3">Nouvelle saison</a>
+    <a href="{{ path('episode_new') }}" class="btn btn-primary mt-3">Nouvel épisode</a>
 </div>
 
 {% endblock %}
