--- a/templates/episode/edit.html.twig
+++ b/templates/episode/edit.html.twig
@@ -1,13 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Episode{% endblock %}
+{% block title %}WS2 - episodes{% endblock %}
 
 {% block body %}
-    <h1>Edit Episode</h1>
+<div class="container">
+    <h1 class="title mt-5 text-center">Modifier l'épisode</h1>
 
-    {{ include('episode/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('episode/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('episode_index') }}">back to list</a>
-
+    <div class="flex justify-content-center">
     {{ include('episode/_delete_form.html.twig') }}
+    </div>
+</div>
+<a class="returnLink" href="{{ path('episode_index') }}">Retour à la liste des épisodes</a>
+   
 {% endblock %}
