--- a/templates/_paging.html.twig
+++ b/templates/_paging.html.twig
@@ -1,5 +1,5 @@
 {% if total > 0 %}
-   {# nombre de pages: total / limit arrondi à l'entier supérieur #}
+   {# number of pages: total nb of episodes / limit rounded to upper number #}
    {% set pages = ((total/limit)|round(0,'ceil')) %}
    <ul class="pagination">
        <li class="{{ (page == 1) ? 'page-item disabled' : 'page-item' }}">
@@ -13,7 +13,7 @@
            </a>
        </li>
 
-       {% for item in 1..pages%} {# de 1 à nombre de pages #}
+       {% for item in 1..pages%} {# from 1 to number of pages #}
            <li class="{{ (page == item) ? 'page-item active' : 'page-item' }}">
                <a class="page-link" href="?page={{ item }}">{{ item }}</a>
            </li>
