--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -12,6 +12,9 @@
       Aucune série trouvée.
    {% endfor %}
 
+   {#pagination#}
+   {% include '_paging.html.twig' %}
+   
    <a href="{{path('program_new')}}" class="btn btn-primary mt-3">Ajouter une série</a>
 </div>
 <div class="returnLink">
