--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -7,7 +7,14 @@
    <h1 class="title mb-5 text-center">Liste des categories:</h1>
    <div class="flex flex-column align-items-center">
       {% for category in categories %}
-      <a href="{{path('category_show', {'categoryName' : category.name}) }}"><h2 class="subtitle">{{ loop.index }} - {{ category.name }}</h2></a>
+      <div class="card categCard text-center mb-1">
+         <div class="card-body">
+            <div class="flex flex-row align-items-center">
+               <img src="{{ asset('build/images/'~category.name~'.png')}}" alt="{{category.name}}_icon" class="categIcon"/>
+               <a href="{{path('category_show', {'categoryName' : category.name}) }}"><h2 class="subtitle categCardSub ms-2">{{ category.name }}</h2></a>
+            </div>
+         </div>
+       </div>
   {% else %}
      Aucune catégorie trouvée.
   {% endfor %}
