change category index display

--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -9,10 +9,10 @@
       {% for category in categories %}
       <div class="card categCard text-center mb-1">
          <div class="card-body">
-            <div class="flex flex-row align-items-center">
-               <img src="{{ asset('build/images/'~category.name~'.png')}}" alt="{{category.name}}_icon" class="categIcon"/>
-               <a href="{{path('category_show', {'categoryName' : category.name}) }}"><h2 class="subtitle categCardSub ms-2">{{ category.name }}</h2></a>
-            </div>
+            <a href="{{path('category_show', {'categoryName' : category.name}) }}">
+                  <img src="{{ asset('build/images/'~category.name~'.png')}}" alt="{{category.name}}_icon" class="categIcon"/>
+                  <h2 class="subtitle categCardSub ms-2">{{ category.name }}</h2></a>
+            </a>
          </div>
        </div>
   {% else %}
