add edit and cancel button to category templates

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -25,13 +25,12 @@
                Aucune série trouvée.
             {% endfor %}      
          </div>
-         {#
+       
              <div class = "flex flex-row justify-content-between">
-            <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn btn-primary col-md-2 mt-3">Modifier</a>
-                {{ include('program/_delete_form.html.twig') }}
-          
+            <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-primary col-md-2 mt-3">Modifier</a>
+                {{ include('category/_delete_form.html.twig') }}
         </div>
-         #}
+        
         
       </div>
    </div>
