--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-    <h1 class="title mt-5 text-center">Modifier l'épisode</h1>
+    <h1 class="title mt-5 text-center">Modifier la categorie</h1>
 
     {{ include('category/_form.html.twig', {'button_label': 'Modifier'}) }}
 
