add pagination to category_show

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -25,11 +25,16 @@
                Aucune série trouvée.
             {% endfor %}      
          </div>
-       
-             <div class = "flex flex-row justify-content-around mt-5">
+
+         {#pagination#}
+         <div class="flex justify-content-center">
+            {% include '_paging.html.twig' %}
+         </div>
+
+         <div class = "flex flex-row justify-content-around mt-5">
             <a href="{{ path('category_edit', {'categoryName': category.name}) }}" class="btn btn-primary col-md-2 mt-3">Modifier la catégorie</a>
-                {{ include('category/_delete_form.html.twig') }}
-            </div>
+               {{ include('category/_delete_form.html.twig') }}
+         </div>
 </div>
 
 <div class="returnLink">
